--- a/OkkaKalipWeb.UI/Views/About/EditService.cshtml
+++ b/OkkaKalipWeb.UI/Views/About/EditService.cshtml
@@ -13,63 +13,78 @@
     </script>
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="card card-primary card-outline">
-            <div class="card-header">
-                <h3 class="card-title">
-                    <i class="fas fa-plus-square"></i>
-                    <b>@Model.Title</b> Adlı Servis İçin Güncelleme İşlemi
-                </h3>
-            </div>
-            <div class="card-body">
 
-                @if (ViewBag.ErrorMessage != null)
-                {
-                    <div class="text-danger">@ViewBag.ErrorMessage</div>
-                }
 
-                <!-- form start -->
-                <form asp-controller="About" asp-action="EditService" method="post" enctype="multipart/form-data">
-                    <div class="col-12 col-md-12">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <input type="hidden" asp-for="Id" value="@Model.Id" />
-                        <div class="card-body">
-                            <div class="form-group row">
-                                <label asp-for="ImageUrl">Resim</label>
-                                <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
-                                <img src="~/img/about/service/@Model.ImageUrl" width="100" />
-                                <div class="custom-file">
-                                    <input type="file" name="file" class="custom-file-input" id="customFile">
-                                    <label class="custom-file-label" for="customFile">Resim Seç</label>
-                                </div>
-                                <span asp-validation-for="ImageUrl" class="text-danger"></span>
-                            </div>
-                            <div class="form-group row">
-                                <label asp-for="Title">Haber Başlığı</label>
-                                <input asp-for="Title" value="@Model.Title" class="form-control" placeholder="Haber Başlığını Giriniz...">
-                                <span asp-validation-for="Title" class="text-danger"></span>
-                            </div>
-                            <div class="form-group row">
-                                <label asp-for="Description">Açıklama</label>
-                                <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control" rows="3"></textarea>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-save"></i>
-                                Kaydet
-                            </button>
-                            <a class="btn btn-outline-info ml-6" asp-controller="About" asp-action="ServiceManageList">
-                                <i class="fas fa-chevron-left"></i>
-                                Listeye Dön
-                            </a>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <!-- /.card -->
+<div class="col-md-12">
+    <div class="card card-primary card-outline">
+        <div class="card-header">
+            <h3 class="card-title">
+                <i class="fas fa-wrench"></i>
+                <b>@Model.Title</b> Adlı Servis İçin Güncelleme İşlemi
+            </h3>
         </div>
+        <div class="card-body">
+            <section class="content">
+                <div class="container-fluid">
+                    <div class="card card-default">
+
+                        @if (ViewBag.ErrorMessage != null)
+                        {
+                            <div class="badge badge-danger">@ViewBag.ErrorMessage</div>
+                        }
+
+                        <form asp-controller="About" asp-action="EditService" method="post" enctype="multipart/form-data">
+
+                            @if (ViewBag.ErrorMessage != null)
+                            {
+                                <div asp-validation-summary="All" class="badge badge-danger"></div>
+                            }
+
+                            <input type="hidden" asp-for="Id" value="@Model.Id" />
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group row mb-5">
+                                            <label asp-for="ImageUrl">Resim</label>
+                                            <input type="hidden" name="ImageUrl" value="@Model.ImageUrl" />
+                                            <div class="col-md-2 ml-4 d-flex justify-content-center">
+                                                <img src="~/img/about/service/@Model.ImageUrl" width="100" class="mr-5" />
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="custom-file">
+                                                    <input type="file" name="file" class="custom-file-input" id="customFile">
+                                                    <label class="custom-file-label" for="customFile">Resim Seç</label>
+                                                </div>
+                                            </div>
+                                            <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="Title">Haber Başlığı</label>
+                                            <input asp-for="Title" value="@Model.Title" class="form-control" placeholder="Haber Başlığını Giriniz...">
+                                            <span asp-validation-for="Title" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="Title">Açıklama</label>
+                                            <textarea asp-for="Description" value="@Model.Description" id="editor" class="form-control col-md-12" style="margin-top:-90px;" rows="3"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fas fa-save"></i>
+                                    Kaydet
+                                </button>
+                                <a class="btn btn-outline-info ml-6" asp-controller="About" asp-action="ServiceManageList">
+                                    <i class="fas fa-chevron-left"></i>
+                                    Listeye Dön
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- /.card -->
     </div>
-    <!-- /.col -->
 </div>
